Changes in Version 1.7.0
  - The 'centrality()' function now includes R-squared (predictability)

Changes in Version 1.6.9
  - Fixed a bug where using qgraph on the output of qgraph did not use all arguments correctly

Changes in Version 1.6.8
  - Fixed a bug with legend not showing when edge labels are used.

Changes in Version 1.6.7
  - node labels are now colored white for lighter nodes with theme = "gray"
  - Added argument label.color.split

Changes in Version 1.6.6
  - Fixed a bug where the diagonal of undirected graphs was counted twice in getWmat
  - Fixed a bug with bnlearn as input

Changes in Version 1.6.5
  - Removed findGraph

Changes in Version 1.6.4
  - Added te as_ggraph function to transform a qgraph object into a ggraph object
  - forcePD now defaults to FALSE in cor_auto
  - Added the argument edge.label.margin to qgraph
  - Fixed a bug with fade not working as matrix/vector when edge.colors are ised

Changes in Version 1.6.3
  - Updated warning message for when the densest network is selected.
  - Added an option countDiagonalPars to ggmFit to count diagonal of the network as parameters, now set to TRUE by default.
  - Added support for drawing confidence regions using pie charts with the following arguments:
    - pieCImid, pieCIlower, pieCIupper, pieCIpointcex, pieCIpointcex
  - Fixed a bug with clusteringTable and clusteringPlot
  
Changes in Version 1.6.2
  - Fixed a bug in centralityPlot

Changes in Version 1.6.1
  - EBIC computation now uses the number of variables in the extra penalty, as opposed to the number of cases.
  - Removed old spelling errors left in for backward competability. The argument 'graph' must now be "cor" or "pcor"
  - Added three more AIC alternatives (thanks to Erikson Kaszubowski)
  
Changes in Version 1.6
  o Major changes:
      o Removed several dependencies in order to start taking qgraph out of dependency hell:
          o The following functions have been *removed*:
              - qgraph.pca