@@ -13,7 +13,6 @@ Authors@R: c(
   person("Denny", "Borsboom", role = c("ctb")))
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 3.0.0)
-Suggests: sendplot
 Imports:  Rcpp (>= 1.0.0), methods, grDevices, psych, lavaan, plyr, Hmisc, igraph, jpeg, png, colorspace, Matrix, corpcor, reshape2, ggplot2, glasso, huge, fdrtool, d3Network, gtools, BDgraph, parallel, pbapply, abind, dplyr, tidygraph, ggraph
 ByteCompile: yes
 Description:  Weighted network visualization and analysis, as well as Gaussian graphical model computation. See Epskamp et al. (2012) <doi:10.18637/jss.v048.i04>.
